--- a/charts/kube-secrets-init/templates/mutatingwebhook.yaml
+++ b/charts/kube-secrets-init/templates/mutatingwebhook.yaml
@@ -88,7 +88,7 @@ webhooks:
       {{- with .Values.objectSelector.matchExpressions }}
 {{ toYaml . | indent 8 }}
       {{- end }}
-        - key: kube-init-secrets.doit-intl.com/mutate
+        - key: kube-secrets-init.doit-intl.com/mutate
           operator: NotIn
           values:
             - skip
