feat(charts/kube-secrets-init): add second object selector
Signed-off-by: Mark Sagi-Kazar <mark.sagikazar@gmail.com>

--- a/charts/kube-secrets-init/Chart.yaml
+++ b/charts/kube-secrets-init/Chart.yaml
@@ -24,6 +24,8 @@ annotations:
       description: Mutating webhook timeout configuration
     - kind: fixed
       description: Default mutating webhook object selector key
+    - kind: added
+      description: Secondary object selector to mutating webhook
   artifacthub.io/images: |
     - name: kube-secrets-init
       image: ghcr.io/doitintl/kube-secrets-init:0.4.0
