chore(charts/kube-secrets-init): add secrets init image to Chart.yaml
Signed-off-by: Mark Sagi-Kazar <mark.sagikazar@gmail.com>

--- a/charts/kube-secrets-init/Chart.yaml
+++ b/charts/kube-secrets-init/Chart.yaml
@@ -29,3 +29,5 @@ annotations:
   artifacthub.io/images: |
     - name: kube-secrets-init
       image: ghcr.io/doitintl/kube-secrets-init:0.4.0
+    - name: secrets-init
+      image: ghcr.io/doitintl/secrets-init:latest
