--- a/charts/kube-secrets-init/templates/mutatingwebhook.yaml
+++ b/charts/kube-secrets-init/templates/mutatingwebhook.yaml
@@ -71,12 +71,12 @@ webhooks:
     namespaceSelector:
       {{- with .Values.namespaceSelector.matchLabels }}
       matchLabels:
-        {{- toYaml . | indent 8 }}
+        {{- toYaml . | nindent 8 }}
       {{- end }}
       matchExpressions:
-      {{- with .Values.namespaceSelector.matchExpressions }}
-{{ toYaml . | indent 8 }}
-      {{- end }}
+        {{- with .Values.namespaceSelector.matchExpressions }}
+        {{- toYaml . | nindent 8 }}
+        {{- end }}
         - key: kube-secrets-init.doit-intl.com/disable-mutation
           operator: NotIn
           values:
@@ -89,12 +89,12 @@ webhooks:
     objectSelector:
       {{- with .Values.objectSelector.matchLabels }}
       matchLabels:
-        {{- toYaml . | indent 8 }}
+        {{- toYaml . | nindent 8 }}
       {{- end }}
       matchExpressions:
-      {{- with .Values.objectSelector.matchExpressions }}
-{{ toYaml . | indent 8 }}
-      {{- end }}
+        {{- with .Values.objectSelector.matchExpressions }}
+        {{- toYaml . | nindent 8 }}
+        {{- end }}
         - key: kube-secrets-init.doit-intl.com/mutate
           operator: NotIn
           values:
