fix(charts/kube-secrets-init): test run when namespaceSelector is customized
Signed-off-by: Mark Sagi-Kazar <mark.sagikazar@gmail.com>

--- a/charts/kube-secrets-init/templates/tests/test-mutating-webhook.yaml
+++ b/charts/kube-secrets-init/templates/tests/test-mutating-webhook.yaml
@@ -10,7 +10,11 @@ spec:
   containers:
     - name: secrets-init
       image: busybox
+      {{- if .Values.namespaceSelector.matchLabels  }}
+      args: ['test', '!', '-f', '/helper/bin/secrets-init']
+      {{ else }}
       args: ['test', '-f', '/helper/bin/secrets-init']
+      {{- end }}
       env:
         # Cheating the webhook into mutating the pod
         - name: SECRET
