--- a/charts/sftpgo/values.yaml
+++ b/charts/sftpgo/values.yaml
@@ -163,6 +163,44 @@ services: {}
   #       nodePort:
   #   externalTrafficPolicy:
 
+# -- Ingress for the web interface
+# Change httpd.web_root in the sftpgo configuration if you change the path
+ingress:
+  # Ingress for the Web UIs (user and admin interface)
+  app:
+    enabled: true
+    className: ""
+    annotations: {}
+      # kubernetes.io/ingress.class: nginx
+      # kubernetes.io/tls-acme: "true"
+    hosts: []
+    #  - host: chart-example.local
+    #    paths:
+    #      - path: /
+    #        pathType: ImplementationSpecific
+    tls: []
+    #  - secretName: chart-example-tls
+    #    hosts:
+    #      - chart-example.local
+
+  # Ingress for the API endpoint
+  api:
+    enabled: false
+    className: ""
+    annotations: {}
+      # nginx.ingress.kubernetes.io/rewrite-target: /$1
+      # kubernetes.io/ingress.class: nginx
+      # kubernetes.io/tls-acme: "true"
+    hosts: []
+    #  - host: chart-example.local
+    #    paths:
+    #      - path: /(api/.*|healthz)$
+    #        pathType: ImplementationSpecific
+    tls: []
+    #  - secretName: chart-example-tls
+    #    hosts:
+    #      - chart-example.local
+
 # -- Container resource [requests and limits](https://kubernetes.io/docs/concepts/configuration/manage-resources-containers/).
 # See the [API reference](https://kubernetes.io/docs/reference/kubernetes-api/workload-resources/pod-v1/#resources) for details.
 # @default -- No requests or limits.
