--- a/charts/sftpgo/values.yaml
+++ b/charts/sftpgo/values.yaml
@@ -205,8 +205,12 @@ hostNetwork: false
 # -- Configure Pod [Topology Spread Constraints](https://kubernetes.io/docs/concepts/workloads/pods/pod-topology-spread-constraints/)
 # Requires Kubernetes >= v1.16
 topologySpreadConstraints:
+  # -- Enable Kubernetes [Topology Spread Constraints](https://kubernetes.io/docs/concepts/workloads/pods/pod-topology-spread-constraints/). Note: Request Kubernetes v1.16+.
   enabled: false
+  # -- Degree to which Pods may be unevenly distributed
   maxSkew: 1
+  # -- Topology key
   # See https://kubernetes.io/docs/reference/kubernetes-api/labels-annotations-taints/
   topologyKey: topology.kubernetes.io/zone
+  # -- How to deal with a Pod if it doesn't satisfy the spread constraint
   whenUnsatisfiable: DoNotSchedule
