--- a/charts/sftpgo/values.yaml
+++ b/charts/sftpgo/values.yaml
@@ -163,21 +163,27 @@ services: {}
   #       nodePort:
   #   externalTrafficPolicy:
 
-# -- Ingress for the web interface
-# Change httpd.web_root in the sftpgo configuration if you change the path
 ingress:
   # Ingress for the Web UIs (user and admin interface)
   app:
-    enabled: true
+    # -- Create an Ingress for the user and admin Web UI
+    enabled: false
+    # -- Ingress class name. See [Kubernetes Ingress](https://kubernetes.io/docs/concepts/services-networking/ingress/) for details.
     className: ""
+    # -- Annotations to be added to the Ingress.
     annotations: {}
       # kubernetes.io/ingress.class: nginx
       # kubernetes.io/tls-acme: "true"
+
+    # -- List of virtual hosts. See [Kubernetes Ingress](https://kubernetes.io/docs/concepts/services-networking/ingress/) for details.
     hosts: []
     #  - host: chart-example.local
+    #    # Change httpd.web_root in the sftpgo configuration if you change the path
     #    paths:
     #      - path: /
     #        pathType: ImplementationSpecific
+
+    # -- List of TLS secrets. See [Kubernetes Ingress](https://kubernetes.io/docs/concepts/services-networking/ingress/) for details.
     tls: []
     #  - secretName: chart-example-tls
     #    hosts:
@@ -185,17 +191,24 @@ ingress:
 
   # Ingress for the API endpoint
   api:
+    # -- Create an Ingress for the API and health endpoint.
     enabled: false
+    # -- Ingress class name. See [Kubernetes Ingress](https://kubernetes.io/docs/concepts/services-networking/ingress/) for details.
     className: ""
+    # -- Annotations to be added to the Ingress.
     annotations: {}
       # nginx.ingress.kubernetes.io/rewrite-target: /$1
       # kubernetes.io/ingress.class: nginx
       # kubernetes.io/tls-acme: "true"
+
+    # -- List of virtual hosts. See [Kubernetes Ingress](https://kubernetes.io/docs/concepts/services-networking/ingress/) for details.
     hosts: []
     #  - host: chart-example.local
     #    paths:
     #      - path: /(api/.*|healthz)$
     #        pathType: ImplementationSpecific
+
+    # -- List of TLS secrets. See [Kubernetes Ingress](https://kubernetes.io/docs/concepts/services-networking/ingress/) for details.
     tls: []
     #  - secretName: chart-example-tls
     #    hosts:
