--- a/charts/sftpgo/values.yaml
+++ b/charts/sftpgo/values.yaml
@@ -202,15 +202,16 @@ affinity: {}
 # Warning: The use of host network is [discouraged](https://kubernetes.io/docs/concepts/configuration/overview/#services). Make sure to use it only when absolutely necessary.
 hostNetwork: false
 
-# -- Configure Pod [Topology Spread Constraints](https://kubernetes.io/docs/concepts/workloads/pods/pod-topology-spread-constraints/)
-# Requires Kubernetes >= v1.16
 topologySpreadConstraints:
-  # -- Enable Kubernetes [Topology Spread Constraints](https://kubernetes.io/docs/concepts/workloads/pods/pod-topology-spread-constraints/). Note: Request Kubernetes v1.16+.
+  # -- Enable pod [Topology Spread Constraints](https://kubernetes.io/docs/concepts/workloads/pods/pod-topology-spread-constraints/).
   enabled: false
-  # -- Degree to which Pods may be unevenly distributed
+
+  # -- Degree to which pods may be unevenly distributed.
   maxSkew: 1
-  # -- Topology key
+
+  # -- The key of node labels.
   # See https://kubernetes.io/docs/reference/kubernetes-api/labels-annotations-taints/
   topologyKey: topology.kubernetes.io/zone
-  # -- How to deal with a Pod if it doesn't satisfy the spread constraint
+
+  # -- How to deal with a Pod if it doesn't satisfy the spread constraint.
   whenUnsatisfiable: DoNotSchedule
