test: add zone label to node for topology tests
Signed-off-by: Mark Sagi-Kazar <mark.sagikazar@gmail.com>

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -116,6 +116,7 @@ jobs:
         with:
           version: v0.11.1
           node_image: ${{ steps.node_image.outputs.image }}
+          config: kind.yaml
 
       - name: Test
         run: ct install --excluded-charts "${{ steps.exclusions.outputs.charts }}"
