--- a/charts/sftpgo/templates/ingress-ui.yaml
+++ b/charts/sftpgo/templates/ingress-ui.yaml
@@ -15,7 +15,7 @@ apiVersion: extensions/v1beta1
 {{- end }}
 kind: Ingress
 metadata:
-  name: {{ $fullName }}-ui
+  name: {{ include "sftpgo.componentname" (list . "ui") }}
   labels:
     {{- include "sftpgo.labels" . | nindent 4 }}
   {{- with .Values.ingress.app.annotations }}
