sftpgo: Remove references to the healthz endpoint
Signed-off-by: Stephan Austermühle <au@hcsd.de>

--- a/charts/sftpgo/values.yaml
+++ b/charts/sftpgo/values.yaml
@@ -203,11 +203,11 @@ api:
       # kubernetes.io/tls-acme: "true"
 
     # -- List of virtual hosts. See [Kubernetes Ingress](https://kubernetes.io/docs/concepts/services-networking/ingress/) for details.
-    # sftpgo does not change the path for the health check and API endpoint if httpd.web_root is set. So, we need to rewrite these paths to the root.
+    # sftpgo does not change the path for the API endpoint if httpd.web_root is set. So, we need to rewrite to the root path.
     hosts: []
     #  - host: chart-example.local
     #    paths:
-    #      - path: /(api/.*|healthz)$
+    #      - path: /api/(.*)
     #        pathType: ImplementationSpecific
 
     # -- List of TLS secrets. See [Kubernetes Ingress](https://kubernetes.io/docs/concepts/services-networking/ingress/) for details.
