--- a/charts/sftpgo/templates/deployment.yaml
+++ b/charts/sftpgo/templates/deployment.yaml
@@ -114,6 +114,9 @@ spec:
           {{- with .Values.volumeMounts }}
             {{- toYaml . | nindent 12 }}
           {{- end }}
+        {{- if .Values.sidecarContainers }}
+          {{- toYaml .Values.sidecarContainers | nindent 8 }}
+        {{- end }}
       volumes:
         - name: config
           configMap:
