Add nodePort increment for additional services

--- a/charts/sftpgo/templates/service.yaml
+++ b/charts/sftpgo/templates/service.yaml
@@ -152,7 +152,8 @@ spec:
       targetPort:  {{ $pasvport }}
       protocol: TCP
       {{- if eq $service.type "NodePort" }}
-      nodePort: {{ $pasvport }}
+      {{- $pasvNodePort:= add $service.ports.ftpPasv.nodeports.start . }}
+      nodePort: {{ $pasvNodePort }}
       {{- end }}
       {{- if semverCompare ">=1.20-0" $.Capabilities.KubeVersion.GitVersion }}
       appProtocol: ftp-data
