--- a/charts/rabbitmq-operator/Chart.yaml
+++ b/charts/rabbitmq-operator/Chart.yaml
@@ -21,8 +21,8 @@ maintainers:
     url: https://sagikazarmark.hu
 annotations:
   artifacthub.io/changes: |
-    - kind: changed
-      description: Bump application to 1.8.3
+    - kind: fixed
+      description: Reformat CRD
   artifacthub.io/images: |
     - name: operator
       image: rabbitmqoperator/cluster-operator:1.8.3
