--- a/charts/tusd/templates/deployment.yaml
+++ b/charts/tusd/templates/deployment.yaml
@@ -27,6 +27,8 @@ spec:
       serviceAccountName: {{ include "tusd.serviceAccountName" . }}
       securityContext:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
+      initContainers:
+        {{- toYaml .Values.initContainers | nindent 8 }}
       containers:
         - name: {{ .Chart.Name }}
           securityContext:
