--- a/charts/sftpgo/values.yaml
+++ b/charts/sftpgo/values.yaml
@@ -24,6 +24,13 @@ nameOverride: ""
 # -- A name to substitute for the full names of resources.
 fullnameOverride: ""
 
+deployment:
+  extraLabels: {}
+  extraAnnotations: {}
+pod:
+  extraLabels: {}
+  extraAnnotations: {}
+
 sftpd:
   # -- Enable SFTP service.
   enabled: true
@@ -67,7 +74,6 @@ envVars: []
   #     configMapKeyRef:
   #       name: SOME_CONFIGMAP_NAME
   #       key: SOME_CONFIGMAP_KEY
-
 
 # -- Additional environment variables passed directly to containers using a simplified key-value syntax.
 env: {}
