remove wrong double dash
Signed-off-by: Issif <issif+github@gadz.org>

--- a/charts/sftpgo/templates/deployment.yaml
+++ b/charts/sftpgo/templates/deployment.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     {{- include "sftpgo.labels" . | nindent 4 }}
     {{- with .Values.deploymentLabels }}
-    {{-- toYaml . | nindent 4 }}
+    {{- toYaml . | nindent 4 }}
     {{- end }}
   {{- with .Values.deploymentAnnotations }}
   annotations:
