--- a/charts/sftpgo/templates/ingress-ui.yaml
+++ b/charts/sftpgo/templates/ingress-ui.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.ui.ingress.enabled -}}
+{{- if and $.Values.httpd.enabled .Values.ui.ingress.enabled -}}
 {{- $fullName := include "sftpgo.fullname" . -}}
 {{- $svcPort := .Values.service.ports.http.port -}}
 {{- if and .Values.ui.ingress.className (not (semverCompare ">=1.18-0" .Capabilities.KubeVersion.GitVersion)) }}
