feat: add deployment annotation

--- a/charts/tusd/templates/deployment.yaml
+++ b/charts/tusd/templates/deployment.yaml
@@ -1,6 +1,10 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
+  {{- with .Values.deploymentAnnotations }}
+  annotations:
+    {{- toYaml . | nindent 4 }}
+  {{- end }}
   name: {{ include "tusd.fullname" . }}
   labels:
     {{- include "tusd.labels" . | nindent 4 }}
