--- a/charts/tusd/Chart.yaml
+++ b/charts/tusd/Chart.yaml
@@ -1,7 +1,7 @@
 apiVersion: v2
 type: application
 name: tusd
-version: 0.0.9
+version: 0.0.10
 appVersion: "1.6.0"
 kubeVersion: ">=1.16.0-0"
 description: "Reference server implementation in Go of tus: the open protocol for resumable file uploads."
@@ -19,7 +19,7 @@ maintainers:
     url: https://sagikazarmark.hu
 annotations:
   artifacthub.io/changes: |
-    - Remove test files from final Helm package
+    - Add support for Deployment annotations
   artifacthub.io/images: |
     - name: tusd
       image: tusproject/tusd:v1.6.0
