--- a/charts/sftpgo/values.yaml
+++ b/charts/sftpgo/values.yaml
@@ -83,13 +83,15 @@ serviceAccount:
   # If not set and create is true, a name is generated using the fullname template.
   name: ""
 
-# -- Annotations to be added to deployment.
+# -- Annotations to be added to deployments.
 deploymentAnnotations: {}
-# -- Labels to be added to deployment.
+
+# -- Labels to be added to deployments.
 deploymentLabels: {}
 
 # -- Annotations to be added to pods.
 podAnnotations: {}
+
 # -- Labels to be added to pods.
 podLabels: {}
 
