--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -53,7 +53,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        kube: ["1.16", "1.17", "1.18", "1.19", "1.20", "1.21"]
+        kube: ["1.16", "1.17", "1.18", "1.19", "1.20", "1.21", "1.22", "1.23"]
 
     steps:
       - name: Checkout
@@ -107,6 +107,10 @@ jobs:
               NODE_IMAGE=kindest/node:v1.20.7@sha256:cbeaf907fc78ac97ce7b625e4bf0de16e3ea725daf6b04f930bd14c67c671ff9 ;;
             1.21)
               NODE_IMAGE=kindest/node:v1.21.1@sha256:69860bda5563ac81e3c0057d654b5253219618a22ec3a346306239bba8cfa1a6 ;;
+            1.22)
+              NODE_IMAGE=kindest/node:v1.22.0@sha256:b8bda84bb3a190e6e028b1760d277454a72267a5454b57db34437c34a588d047 ;;
+            1.23)
+              NODE_IMAGE=kindest/node:v1.23.0@sha256:49824ab1727c04e56a21a5d8372a402fcd32ea51ac96a2706a12af38934f81ac ;;
             esac
 
             echo "::set-output name=image::$NODE_IMAGE"
