--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -4,6 +4,6 @@ updates:
   - package-ecosystem: github-actions
     directory: /
     labels:
-      - dependencies
+      - area/dependencies
     schedule:
       interval: daily
