--- a/charts/sftpgo/templates/secret.yaml
+++ b/charts/sftpgo/templates/secret.yaml
@@ -14,3 +14,24 @@ metadata:
 data:
   {{ .Values.sftpgo.signingPassphrase.secretKey }}: {{ $signingPassphrase }}
 {{- end }}
+
+---
+{{ if .Values.sftpgo.defaultAdmin.enabled }}
+{{- $username := .Values.sftpgo.defaultAdmin.username | b64enc | quote }}
+{{- $password := (randAlphaNum 32) | b64enc | quote }}
+{{- $secret := (lookup "v1" "Secret" .Release.Namespace (include "sftpgo.adminAccount" .)) }}
+{{- if $secret }}
+{{- $username = get $secret.data .Values.sftpgo.defaultAdmin.usernameKey }}
+{{- $password = get $secret.data .Values.sftpgo.defaultAdmin.passwordKey }}
+{{- end -}}
+apiVersion: v1
+kind: Secret
+type: Opaque
+metadata:
+  name: {{ include "sftpgo.adminAccount" . }}
+  labels:
+    {{- include "sftpgo.labels" . | nindent 4 }}
+data:
+  {{ .Values.sftpgo.defaultAdmin.usernameKey }}: {{ $username }}
+  {{ .Values.sftpgo.defaultAdmin.passwordKey }}: {{ $password }}
+{{- end }}
