--- a/charts/tusd/templates/deployment.yaml
+++ b/charts/tusd/templates/deployment.yaml
@@ -31,6 +31,10 @@ spec:
       serviceAccountName: {{ include "tusd.serviceAccountName" . }}
       securityContext:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
+      {{- with .Values.initContainers }}
+      initContainers:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
       containers:
         - name: {{ .Chart.Name }}
           securityContext:
