chore: adding token support on readiness probe
https://docs.browserless.io/docs/docker.html#securing-your-instance

--- a/charts/browserless-chrome/templates/deployment.yaml
+++ b/charts/browserless-chrome/templates/deployment.yaml
@@ -57,7 +57,11 @@ spec:
               port: http
           readinessProbe:
             httpGet:
+              {{- if .Values.env.TOKEN }}
+              path: /pressure?token={{ .Values.env.TOKEN }}
+              {{- else }}
               path: /pressure
+              {{- end }}
               port: http
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
