add log-level as value for the deployment

--- a/charts/kube-secrets-init/values.yaml
+++ b/charts/kube-secrets-init/values.yaml
@@ -15,6 +15,10 @@ image:
   # -- Image tag override for the default value (chart appVersion).
   tag: ""
 
+# define log-level argument for kube-secrets-init container:
+# could be "info", "debug", "warning", "error", "fatal", "panic"
+logLevel: info
+
 # -- Reference to one or more secrets to be used when [pulling images](https://kubernetes.io/docs/tasks/configure-pod-container/pull-image-private-registry/#create-a-pod-that-uses-your-secret) (from private registries).
 imagePullSecrets: []
 
