chore(sftpgo): update artifact.io changelog

--- a/charts/sftpgo/Chart.yaml
+++ b/charts/sftpgo/Chart.yaml
@@ -19,10 +19,8 @@ maintainers:
     url: https://sagikazarmark.hu
 annotations:
   artifacthub.io/changes: |
-    - kind: fixed
-      description: Match the app.kubernetes.io/version label to the image tag
-    - kind: changed
-      description: Updated sftpgo to 2.4.3
+    - kind: added
+      description: Add support for custom sidecar containers
   artifacthub.io/images: |
     - name: sftpgo
       image: ghcr.io/drakkan/sftpgo:v2.4.3
